Adds logfile Adds binary files to ignore list